fix align on to-do description text

--- a/03_to_do_list.css
+++ b/03_to_do_list.css
@@ -34,7 +34,7 @@ h3, h2{
     font-size: large;
     width: 40%;
     display: inline-block;
-    text-decoration:inherit
+    text-decoration:inherit;
 }
 
 .to_do_description{
@@ -42,7 +42,8 @@ h3, h2{
     overflow:hidden;
     width: 45%;
     display: inline-block;
-    text-decoration:inherit
+    text-decoration:inherit;
+    vertical-align:middle;
 }
 
 .to_do_generator{
